feat: debugged tool scripts & paths

--- a/Jsons/language/fr.json
+++ b/Jsons/language/fr.json
@@ -253,7 +253,7 @@
   "cal_ethiopian": "éthiopien",
   "cal_hebrew": "hébreu",
   "cal_balinese": "Balinais (Pawukon et Saka)",
-  "cal_creationist": "Créationniste",
+  "cal_creationist": "créationniste",
   "cal_gregorian_explanation": "Utilisation mondiale : 95 % (usage officiel) – Utilisé comme calendrier civil dans la quasi-totalité des pays à des fins officielles, économiques et internationales. Même ceux qui suivent d’autres calendriers utilisent souvent le calendrier grégorien au quotidien.",
   "cal_islamic_explanation": "Utilisation mondiale : 24 % (usage religieux) – Suivie par environ 2 milliards de musulmans (soit environ 24 % de la population mondiale). Principalement pour les fêtes religieuses (Ramadan, Hajj, etc.), mais généralement pas pour l’administration civile (sauf en Arabie saoudite).",
   "cal_chinese_explanation": "Usage mondial : 18 % (usage culturel) – Observé par environ 1,4 milliard de Chinois et de communautés chinoises d’outre-mer lors de fêtes comme le Nouvel An lunaire. Non utilisé pour l’administration civile.",
